--- a/SamJ/platforms/browser/www/cist/fr/index.html
+++ b/SamJ/platforms/browser/www/cist/fr/index.html
@@ -34,12 +34,12 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/index.html">Accueil</a></li>
-                <li><a href="/alcool/fr/index.html">Alcool</a></li>
-                <li><a href="/cist/fr/index.html">Contraception et IST</a></li>
-                <li><a href="/maldedos/fr/index.html">Mal de dos chez les jeunes</a></li>
-                <li><a href="/obesite/fr/index.html">Obésité</a></li>
-                <li><a href="/tabac/fr/index.html">Tabac</a></li>
+                <li><a href="../../index.html">Accueil</a></li>
+                <li><a href="../../alcool/fr/index.html">Alcool</a></li>
+                <li><a href="../../cist/fr/index.html">Contraception et IST</a></li>
+                <li><a href="../../maldedos/fr/index.html">Mal de dos chez les jeunes</a></li>
+                <li><a href="../../obesite/fr/index.html">Obésité</a></li>
+                <li><a href="../../tabac/fr/index.html">Tabac</a></li>
 
             </ul>
         </div><!--/.nav-collapse -->
@@ -76,7 +76,7 @@
         <div class="col-lg-12 panel">
             <div class="embed-responsive embed-responsive-16by9">
                 <video  controls>
-                    <source src="/videos/fr/vaccination.mp4" type="video/mp4">
+                    <source src="../../videos/fr/vaccination.mp4" type="video/mp4">
                     Your browser does not support HTML5 video.
                 </video>
             </div>
