--- a/SamJ/platforms/browser/www/index_fr.html
+++ b/SamJ/platforms/browser/www/index_fr.html
@@ -36,11 +36,11 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="/alcool/fr/index.html">Alcool</a></li>
-                <li><a href="/cist/fr/index.html">Contraception et IST</a></li>
-                <li><a href="/maldedos/fr/index.html">Mal de dos chez les jeunes</a></li>
-                <li><a href="/obesite/fr/index.html">Obésité</a></li>
-                <li><a href="/tabac/fr/index.html">Tabac</a></li>
+                <li><a href="alcool/fr/index.html">Alcool</a></li>
+                <li><a href="cist/fr/index.html">Contraception et IST</a></li>
+                <li><a href="maldedos/fr/index.html">Mal de dos chez les jeunes</a></li>
+                <li><a href="obesite/fr/index.html">Obésité</a></li>
+                <li><a href="tabac/fr/index.html">Tabac</a></li>
 
             </ul>
         </div><!--/.nav-collapse -->
@@ -61,7 +61,7 @@
                 <a href="maldedos/fr/index.html" class="list-group-item">Mal de dos chez les jeunes</a>
                 <a href="obesite/fr/index.html" class="list-group-item">Obésité</a>
                 <a href="tabac/fr/index.html" class="list-group-item">Tabac</a>
-                <a href="../../index.html" class="list-group-item">Page précédente</a>
+                <a href="index.html" class="list-group-item">Page précédente</a>
 
 
             </div>
