--- a/SamJ/platforms/browser/www/maldedos/fr/index.html
+++ b/SamJ/platforms/browser/www/maldedos/fr/index.html
@@ -34,12 +34,12 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/index.html">Accueil</a></li>
-                <li><a href="/alcool/gb/index.html">Alcohol</a></li>
-                <li><a href="/cist/gb/index.html">Contraception and STI</a></li>
-                <li><a href="/maldedos/gb/index.html">Back pain in young people</a></li>
-                <li><a href="/obesite/gb/index.html">Obesity</a></li>
-                <li><a href="/tabac/gb/index.html">Smoking </a></li>
+                <li><a href="../../index.html">Accueil</a></li>
+                <li><a href="../../alcool/fr/index.html">Alcool</a></li>
+                <li><a href="../../cist/fr/index.html">Contraception et IST</a></li>
+                <li><a href="../../maldedos/fr/index.html">Mal de dos chez les jeunes</a></li>
+                <li><a href="../../obesite/fr/index.html">Obésité</a></li>
+                <li><a href="../../tabac/fr/index.html">Tabac</a></li>
 
             </ul>
         </div><!--/.nav-collapse -->
@@ -49,7 +49,7 @@
 <div class="container text-center">
     <div class="row">
         <a href="../../index_fr.html" class="btn btn-primary">Retour aux thèmes</a>
-        <h2>Contraception et IST</h2>
+        <h2>Mal de dos chez les jeunes</h2>
     </div>
 
 
@@ -77,7 +77,7 @@
         <div class="col-lg-12 panel">
             <div class="embed-responsive embed-responsive-16by9">
                 <video  controls>
-                    <source src="/videos/fr/mal-de-dos.mp4" type="video/mp4">
+                    <source src="../../videos/fr/mal-de-dos.mp4" type="video/mp4">
                     Your browser does not support HTML5 video.
                 </video>
             </div>
