--- a/SamJ/www/index_gb.html
+++ b/SamJ/www/index_gb.html
@@ -34,12 +34,12 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/alcool/gb/index.html">Alcohol</a></li>
-                <li><a href="/cist/gb/index.html">Contraception and STI</a></li>
-                <li><a href="/maldedos/gb/index.html">Back pain in young people</a></li>
-                <li><a href="/obesite/gb/index.html">Obesity</a></li>
-                <li><a href="/tabac/gb/index.html">Smoking </a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="alcool/gb/index.html">Alcohol</a></li>
+                <li><a href="cist/gb/index.html">Contraception and STI</a></li>
+                <li><a href="maldedos/gb/index.html">Back pain in young people</a></li>
+                <li><a href="obesite/gb/index.html">Obesity</a></li>
+                <li><a href="tabac/gb/index.html">Smoking </a></li>
 
             </ul>
         </div><!--/.nav-collapse -->
@@ -60,7 +60,7 @@
                 <a href="maldedos/gb/index.html" class="list-group-item">Back pain in young people</a>
                 <a href="obesite/gb/index.html" class="list-group-item">Obesity</a>
                 <a href="tabac/gb/index.html" class="list-group-item">Smoking</a>
-                <a href="../../index.html" class="list-group-item">Back</a>
+                <a href="index.html" class="list-group-item">Back</a>
 
 
             </div>
