--- a/SamJ/www/maldedos/gb/index.html
+++ b/SamJ/www/maldedos/gb/index.html
@@ -34,12 +34,12 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/alcool/gb/index.html">Alcohol</a></li>
-                <li><a href="/cist/gb/index.html">Contraception and STI</a></li>
-                <li><a href="/maldedos/gb/index.html">Back pain in young people</a></li>
-                <li><a href="/obesite/gb/index.html">Obesity</a></li>
-                <li><a href="/tabac/gb/index.html">Smoking </a></li>
+                <li><a href="../../index.html">Home</a></li>
+                <li><a href="../../alcool/gb/index.html">Alcohol</a></li>
+                <li><a href="../../cist/gb/index.html">Contraception and STI</a></li>
+                <li><a href="../../maldedos/gb/index.html">Back pain in young people</a></li>
+                <li><a href="../../obesite/gb/index.html">Obesity</a></li>
+                <li><a href="../../tabac/gb/index.html">Smoking </a></li>
 
             </ul>
         </div><!--/.nav-collapse -->
@@ -73,7 +73,7 @@
         <div class="col-lg-12 panel">
             <div class="embed-responsive embed-responsive-16by9">
                 <video  controls>
-                    <source src="/videos/gb/mal-de-dos.mp4" type="video/mp4">
+                    <source src="../../videos/gb/mal-de-dos.mp4" type="video/mp4">
                     Your browser does not support HTML5 video.
                 </video>
             </div>
