--- a/SamJ/platforms/browser/www/cist/gb/index.html
+++ b/SamJ/platforms/browser/www/cist/gb/index.html
@@ -75,6 +75,23 @@
         <div class="col-lg-12 panel">
             <div class="embed-responsive embed-responsive-16by9">
                 <video  controls>
+                    <source src="../../videos/gb/contraception.mp4" type="video/mp4">
+                    Your browser does not support HTML5 video.
+                </video>
+            </div>
+
+
+        </div>
+        <div class="row">
+            <br><br>
+        </div>
+
+        <div class="panel-heading">
+            Please click the  play button on bottom  to watch the video
+        </div>
+        <div class="col-lg-12 panel">
+            <div class="embed-responsive embed-responsive-16by9">
+                <video  controls>
                     <source src="../../videos/gb/vaccination.mp4" type="video/mp4">
                     Your browser does not support HTML5 video.
                 </video>
@@ -85,6 +102,7 @@
         <div class="row">
             <br><br>
         </div>
+
     </div>
     <script type="text/javascript" src="../../cordova.js"></script>
     <script type="text/javascript" src="../../js/jquery-3.1.1.min.js"></script>
