--- a/SamJ/www/cist/fr/index.html
+++ b/SamJ/www/cist/fr/index.html
@@ -76,6 +76,23 @@
         <div class="col-lg-12 panel">
             <div class="embed-responsive embed-responsive-16by9">
                 <video  controls>
+                    <source src="../../videos/fr/contraception.mp4" type="video/mp4">
+                    Your browser does not support HTML5 video.
+                </video>
+            </div>
+
+
+        </div>
+        <div class="row">
+            <br><br>
+        </div>
+
+        <div class="panel-heading">
+            Cliquer sur le bouton play pour visionner  la vidéo ci dessous
+        </div>
+        <div class="col-lg-12 panel">
+            <div class="embed-responsive embed-responsive-16by9">
+                <video  controls>
                     <source src="../../videos/fr/vaccination.mp4" type="video/mp4">
                     Your browser does not support HTML5 video.
                 </video>
