--- a/SamJ/platforms/browser/www/alcool/fr/index.html
+++ b/SamJ/platforms/browser/www/alcool/fr/index.html
@@ -84,9 +84,9 @@
 
 
     </div>
-    <div class="row">
-        <br><br>
-    </div>
+        <div class="row">
+            <a href="quizz.html" class="btn btn-success">Testez vos connaissances avec notre quizz</a><br><br>
+        </div>
 </div>
 <script type="text/javascript" src="../../cordova.js"></script>
 <script type="text/javascript" src="../../js/jquery-3.1.1.min.js"></script>
