--- a/SamJ/platforms/browser/www/tabac/fr/index.html
+++ b/SamJ/platforms/browser/www/tabac/fr/index.html
@@ -94,7 +94,7 @@
 
         </div>
         <div class="row">
-            <br><br>
+            <a href="quizz.html" class="btn btn-success">Testez vos connaissances avec notre quizz</a><br><br>
         </div>
     </div>
     <script type="text/javascript" src="../../cordova.js"></script>
