--- a/SamJ/platforms/browser/www/cist/gb/index.html
+++ b/SamJ/platforms/browser/www/cist/gb/index.html
@@ -40,6 +40,7 @@
                 <li><a href="../../maldedos/gb/index.html">Back pain in young people</a></li>
                 <li><a href="../../obesite/gb/index.html">Obesity</a></li>
                 <li><a href="../../tabac/gb/index.html">Smoking </a></li>
+                <li><a href="../../vaccination/gb/index.html">Vaccination </a></li>
 
             </ul>
         </div><!--/.nav-collapse -->
@@ -82,23 +83,9 @@
 
 
         </div>
-        <div class="row">
-            <br><br>
-        </div>
-
-        <div class="panel-heading">
-            Please click the  play button on bottom  to watch the video
-        </div>
-        <div class="col-lg-12 panel">
-            <div class="embed-responsive embed-responsive-16by9">
-                <video  controls>
-                    <source src="../../videos/gb/vaccination.mp4" type="video/mp4">
-                    Your browser does not support HTML5 video.
-                </video>
-            </div>
 
 
-        </div>
+
         <div class="row">
             <a href="quizz.html" class="btn btn-success">Test your knowledge width our quizz</a><br><br>
         </div>
