--- a/SamJ/www/vaccination/gb/index.html
+++ b/SamJ/www/vaccination/gb/index.html
@@ -40,7 +40,8 @@
                 <li><a href="../../maldedos/gb/index.html">Back pain in young people</a></li>
                 <li><a href="../../obesite/gb/index.html">Obesity</a></li>
                 <li><a href="../../tabac/gb/index.html">Smoking </a></li>
-                <li><a href="../../vaccination/gb/index.html">Vaccination </a></li>
+                <li><a href="../../vaccination/gb/index.html">Vaccination</a></li>
+
 
             </ul>
         </div><!--/.nav-collapse -->
@@ -50,26 +51,26 @@
 <div class="container text-center">
     <div class="row">
         <a href="../../index_gb.html" class="btn btn-primary">Back</a>
-        <h2>Alcohol
-        </h2>
+        <h2>Vaccination</h2>
     </div>
 
 
     <div class="row margin_menu">
         <div class="col-lg-12">
             <p  align="justify">
-                Alcohol is a psychoactive substance, that’s to say it has some negative effects on the brain: it can alter consciousness, perception and behaviour.<br><br>
 
-                In France, 23 youngsters are killed on the road every year, roughly 1250 per year.<br>
-                This is the main death rate for young people between the ages of 15 and 24 without considering thousands of seriously injured persons.<br><br>
+                Vaccination is a way of protecting itself against the development of some diseases caused by microbes (bacteria or viruses), before this person is affected by these diseases. ... The microbe, rendered harmless, does not cause the disease.<br><br>
+                In 2018, vaccinations against Diphtheria, Tetanus and Poliomyelitis, Pertussis, Haemophilus influenzae b, Hepatitis B, Meningococcus C, Pneumococcus, Measles, Mumps, Rubella are obligatory before the age of 2 years for infants born on or after January 1, 2018.<br><br>
+                During adolescence, vaccinations remain necessary. These may be vaccinations useful at this time of life or catch-up for vaccinations not performed during childhood.<br><br>
 
-                Alcohol slows down reflexes and reduces vigilance.<br><br>
+            </p>
+            <h4><a href="#">Recommendation:</a> </h4>
+            <br>
+            <p align="justify">
+                <u>Meningococcal meningitis and sepsis C:</u> Vaccination up to and including 24 years.<br><br>
+                <u>Human Papillomavirus (HPV) Infections:</u> For all unvaccinated 14-year-old girls. .<br><br>
+                <u>Hepatitis B:</u> For unvaccinated adolescents, catch-up is possible up to 15 years.<br><br>
 
-                The risk of lethal accident increases very fast according to blood alcohol level: from 0.5 gram of alcohol per litre, the risk is multiplied by 2 then by 10 from 0.8 gram per litre and by 35 at 1.2 gram per litre.<br><br>
-
-                A massive consumption of alcohol in a short period of time (which is sometimes defined as ‘Binge drinking’ or ‘cuite express’) has immediate effects on the body.<br><br>
-
-                Drunkenness can have side effects such as nausea, vomiting, memory loss and euphoria.  When drinking large quantities of alcohol, you can lose consciousness: that is ethylic coma, real poisoning which requires to be hospitalized in emergency. You may die out for lack of treatment.
             </p>
 
         </div>
@@ -82,7 +83,7 @@
         <div class="col-lg-12 panel">
             <div class="embed-responsive embed-responsive-16by9">
                 <video  controls>
-                    <source src="../..//videos/gb/alcool.mp4" type="video/mp4">
+                    <source src="../../videos/gb/vaccination.mp4" type="video/mp4">
                     Your browser does not support HTML5 video.
                 </video>
             </div>
