--- a/SamJ/platforms/browser/www/maldedos/gb/index.html
+++ b/SamJ/platforms/browser/www/maldedos/gb/index.html
@@ -40,6 +40,7 @@
                 <li><a href="../../maldedos/gb/index.html">Back pain in young people</a></li>
                 <li><a href="../../obesite/gb/index.html">Obesity</a></li>
                 <li><a href="../../tabac/gb/index.html">Smoking </a></li>
+                <li><a href="../../vaccination/gb/index.html">Vaccination </a></li>
 
             </ul>
         </div><!--/.nav-collapse -->
