--- a/SamJ/platforms/browser/www/obesite/fr/index.html
+++ b/SamJ/platforms/browser/www/obesite/fr/index.html
@@ -40,6 +40,8 @@
                 <li><a href="../../maldedos/fr/index.html">Mal de dos chez les jeunes</a></li>
                 <li><a href="../../obesite/fr/index.html">Obésité</a></li>
                 <li><a href="../../tabac/fr/index.html">Tabac</a></li>
+                <li><a href="../../vaccination/fr/index.html">Vaccination</a></li>
+
 
             </ul>
         </div><!--/.nav-collapse -->
