--- a/SamJ/www/cist/fr/index.html
+++ b/SamJ/www/cist/fr/index.html
@@ -40,6 +40,8 @@
                 <li><a href="../../maldedos/fr/index.html">Mal de dos chez les jeunes</a></li>
                 <li><a href="../../obesite/fr/index.html">Obésité</a></li>
                 <li><a href="../../tabac/fr/index.html">Tabac</a></li>
+                <li><a href="../../vaccination/fr/index.html">Vaccination</a></li>
+
 
             </ul>
         </div><!--/.nav-collapse -->
@@ -87,19 +89,7 @@
             <br><br>
         </div>
 
-        <div class="panel-heading">
-            Cliquer sur le bouton play pour visionner  la vidéo ci dessous
-        </div>
-        <div class="col-lg-12 panel">
-            <div class="embed-responsive embed-responsive-16by9">
-                <video  controls>
-                    <source src="../../videos/fr/vaccination.mp4" type="video/mp4">
-                    Your browser does not support HTML5 video.
-                </video>
-            </div>
 
-
-        </div>
         <div class="row">
             <a href="quizz.html" class="btn btn-success">Testez vos connaissances avec notre quizz</a><br><br>
         </div>
