--- a/SamJ/www/index_fr.html
+++ b/SamJ/www/index_fr.html
@@ -41,6 +41,7 @@
                 <li><a href="maldedos/fr/index.html">Mal de dos chez les jeunes</a></li>
                 <li><a href="obesite/fr/index.html">Obésité</a></li>
                 <li><a href="tabac/fr/index.html">Tabac</a></li>
+                <li><a href="vaccination/fr/index.html">Tabac</a></li>
 
             </ul>
         </div><!--/.nav-collapse -->
@@ -61,6 +62,8 @@
                 <a href="maldedos/fr/index.html" class="list-group-item">Mal de dos chez les jeunes</a>
                 <a href="obesite/fr/index.html" class="list-group-item">Obésité</a>
                 <a href="tabac/fr/index.html" class="list-group-item">Tabac</a>
+                <a href="vaccination/fr/index.html" class="list-group-item">Vaccination</a>
+
                 <a href="index.html" class="list-group-item">Page précédente</a>
 
 
