--- a/SamJ/www/index_gb.html
+++ b/SamJ/www/index_gb.html
@@ -40,6 +40,7 @@
                 <li><a href="maldedos/gb/index.html">Back pain in young people</a></li>
                 <li><a href="obesite/gb/index.html">Obesity</a></li>
                 <li><a href="tabac/gb/index.html">Smoking </a></li>
+                <li><a href="vaccination/gb/index.html">Vaccination</a></li>
 
             </ul>
         </div><!--/.nav-collapse -->
@@ -60,6 +61,7 @@
                 <a href="maldedos/gb/index.html" class="list-group-item">Back pain in young people</a>
                 <a href="obesite/gb/index.html" class="list-group-item">Obesity</a>
                 <a href="tabac/gb/index.html" class="list-group-item">Smoking</a>
+                <a href="vaccination/gb/index.html" class="list-group-item">Vaccination</a>
                 <a href="index.html" class="list-group-item">Back</a>
 
 
