--- a/SamJ/www/vaccination/fr/index.html
+++ b/SamJ/www/vaccination/fr/index.html
@@ -34,13 +34,15 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="../../index.html">Home</a></li>
-                <li><a href="../../alcool/gb/index.html">Alcohol</a></li>
-                <li><a href="../../cist/gb/index.html">Contraception and STI</a></li>
-                <li><a href="../../maldedos/gb/index.html">Back pain in young people</a></li>
-                <li><a href="../../obesite/gb/index.html">Obesity</a></li>
-                <li><a href="../../tabac/gb/index.html">Smoking </a></li>
-                <li><a href="../../vaccination/gb/index.html">Vaccination </a></li>
+                <li><a href="../../index.html">Accueil</a></li>
+                <li><a href="../../alcool/fr/index.html">Alcool</a></li>
+                <li><a href="../../cist/fr/index.html">Contraception et IST</a></li>
+                <li><a href="../../maldedos/fr/index.html">Mal de dos chez les jeunes</a></li>
+                <li><a href="../../obesite/fr/index.html">Obésité</a></li>
+                <li><a href="../../tabac/fr/index.html">Tabac</a></li>
+                <li><a href="../../vaccination/fr/index.html">Vaccination</a></li>
+
+
 
             </ul>
         </div><!--/.nav-collapse -->
@@ -49,27 +51,28 @@
 
 <div class="container text-center">
     <div class="row">
-        <a href="../../index_gb.html" class="btn btn-primary">Back</a>
-        <h2>Alcohol
-        </h2>
+        <a href="../../index_fr.html" class="btn btn-primary">Retour aux thèmes</a>
+        <h2>Vaccination</h2>
     </div>
 
 
     <div class="row margin_menu">
         <div class="col-lg-12">
+            <p  align="justify"> La vaccination est un moyen de protéger un individu contre le développement de certaines maladies infectieuses dues à des microbes (bactéries ou virus), avant que cette personne ne soit atteinte par ces maladies. ... Le microbe, rendu inoffensif, n'entraîne donc pas la maladie.
+            <br><br>En 2018, les vaccinations contre la Diphtérie, le Tétanos et la Poliomyélite, la Coqueluche, l’Haemophilus influenzae b, l’Hépatite B, le Méningocoque C, le Pneumocoque, la Rougeole, Oreillons, Rubéole sont obligatoires avant l’âge de 2 ans pour les nourrissons nés à partir du 1er janvier 2018.
+            </p>
+
+            <p  align="justify">Durant l’adolescence, les vaccinations restent nécessaires. Il peut s’agir de vaccinations utiles à cette période de la vie ou de rattrapages
+            </p>
+
+            <h4><a href="#">Recommandations:</a></h4>
             <p  align="justify">
-                Alcohol is a psychoactive substance, that’s to say it has some negative effects on the brain: it can alter consciousness, perception and behaviour.<br><br>
+                <br>
+               <u>Méningites et septicémies à méningocoque C :</u>  Vaccination possible jusqu’à 24 ans inclus.<br><br>
+               <u>Infections à Papillomavirus humain (HPV) :</u>  Pour toutes les jeunes filles de 14 ans non vaccinées.<br> <br>
+                <u>Hépatite B :</u> Pour les adolescents non vaccinés, un rattrapage est possible jusqu’à 15 ans<br>
 
-                In France, 23 youngsters are killed on the road every year, roughly 1250 per year.<br>
-                This is the main death rate for young people between the ages of 15 and 24 without considering thousands of seriously injured persons.<br><br>
 
-                Alcohol slows down reflexes and reduces vigilance.<br><br>
-
-                The risk of lethal accident increases very fast according to blood alcohol level: from 0.5 gram of alcohol per litre, the risk is multiplied by 2 then by 10 from 0.8 gram per litre and by 35 at 1.2 gram per litre.<br><br>
-
-                A massive consumption of alcohol in a short period of time (which is sometimes defined as ‘Binge drinking’ or ‘cuite express’) has immediate effects on the body.<br><br>
-
-                Drunkenness can have side effects such as nausea, vomiting, memory loss and euphoria.  When drinking large quantities of alcohol, you can lose consciousness: that is ethylic coma, real poisoning which requires to be hospitalized in emergency. You may die out for lack of treatment.
             </p>
 
         </div>
@@ -77,12 +80,12 @@
 
     <div class="row">
         <div class="panel-heading">
-            Please click the  play button on bottom  to watch the video
+            Cliquer sur le bouton play pour visionner  la vidéo ci dessous
         </div>
         <div class="col-lg-12 panel">
             <div class="embed-responsive embed-responsive-16by9">
                 <video  controls>
-                    <source src="../..//videos/gb/alcool.mp4" type="video/mp4">
+                    <source src="../../videos/fr/vaccination.mp4" type="video/mp4">
                     Your browser does not support HTML5 video.
                 </video>
             </div>
@@ -90,7 +93,7 @@
 
         </div>
         <div class="row">
-            <a href="quizz.html" class="btn btn-success">Test your knowledge width our quizz</a><br><br>
+            <a href="quizz.html" class="btn btn-success">Testez vos connaissances avec notre quizz</a><br><br>
         </div>
     </div>
     <script type="text/javascript" src="../../cordova.js"></script>
